Changes to gradle file